--- a/registrant/src/main/resources/application.properties
+++ b/registrant/src/main/resources/application.properties
@@ -16,4 +16,6 @@ spring.h2.console.path=/h2-console
 #Setting database url
 spring.datasource.url=jdbc:h2:mem:devDb
 
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.defer-datasource-initialization=true
