add fields and fields controls

--- a/registrant/src/main/resources/application.properties
+++ b/registrant/src/main/resources/application.properties
@@ -16,6 +16,5 @@ spring.h2.console.path=/h2-console
 #Setting database url
 spring.datasource.url=jdbc:h2:mem:devDb
 
-#spring.jpa.hibernate.ddl-auto=none
-
+#Datasource initialization (since version 2.5)
 spring.jpa.defer-datasource-initialization=true
