enable message error in response, validation fields with annotion, return 400 when violation constraint instead of 500

--- a/registrant/src/main/resources/application.properties
+++ b/registrant/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 #Setting deployment port
 server.port = 8091
 
+##Dispaly error message in the HTTP response
+server.error.include-message=always
+server.error.include-binding-errors=always
+
 #Setting application name
 spring.application.name = ms-registrant
 
@@ -18,3 +22,4 @@ spring.datasource.url=jdbc:h2:mem:devDb
 
 #Datasource initialization (since version 2.5)
 spring.jpa.defer-datasource-initialization=true
+
